--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,11 +1,9 @@
 # Introduction
  
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+i have been collecting scraps of information about various topics, and i thought this would be a good place to collect them
 
 ## What is Nextra?
 
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
+A **simple**, **powerful** and *flexible* site generation framework with everything you love from Next.js.
 
 ## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
