--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -2,8 +2,6 @@
  
 i have been collecting scraps of information about various topics, and i thought this would be a good place to collect them
 
-## What is Nextra?
+## Main Directory
 
-A **simple**, **powerful** and *flexible* site generation framework with everything you love from Next.js.
-
-## Documentation
+just a lil
